--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com/"
+baseurl = "https://tech.ontheroad.jp/"
 languageCode = "en-us"
 theme = "hugo-theme-terminal"
 paginate = 5
